# lets_learn_tech

./: .gitignore  LICENSE  README.md
.github/workflow/: deploy.yaml
.github/workflows/: deploy.yaml
learn_tech_together/: README.md  package-lock.json  package.json
ltt_client/: .umirc.ts  README.md  package-lock.json  package.json
ltt_client/src/assets/: notify_theme.css  reuseable.less
ltt_client/src/layouts/: index.less  index.tsx
ltt_client/src/pages/: index.less  index.tsx
ltt_server/: Cargo.toml  config.json  config_temp.json  email_config.json  email_config_temp.json
ltt_server/sql/: create_article_info.sql  create_user_info.sql  demo_article.sql  demo_user.sql  f_unc_article_del.sql  func_article_create.sql  func_article_del.sql  func_article_update.sql
ltt_server/src/: main.rs  memstate_lock.rs  memstate_nolock.rs  readconfig.rs  sql.rs  user.rs
ltt_server/src/apis/: api_generated.rs  article_del.rs  article_getdetail.rs  article_new.rs  article_update.rs  articles_getwithtag.rs  comment_to.rs  comment_update.rs  comments_getofarticle.rs  get_verifycode.rs  mod.rs  print.rs  tags_fetch.rs  user_basic_info.rs  user_create.rs  user_login.rs  verify_code_get.rs  verify_token.rs  verifycode.rs
ltt_server/src/db/: article.rs  article_tag.rs  comment.rs  mod.rs  sql.rs  tag.rs  user.rs  util.rs
ltt_server/src/manager/: mod.rs
ltt_server/src/model/: mod.rs  tag.rs
ltt_server/src/models/: article.rs  comment.rs  mod.rs  path.rs  tag.rs  user.rs
ltt_server/src/services/: article.rs  comment.rs  email_service.rs  mod.rs  password_md5.rs  robot_service.rs  tag.rs  token.rs  user.rs  user_manager.rs  verifycode.rs
ltt_server/src/test/: README.md  article_del.rs  mod.rs  password_md5_test.rs  verifycode_test.rs
scripts/: api_gen.py  temp_api_generated.rs  temp_api_generated.ts
(+76 files in other folders)
