[package]
name = "ltt_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.13"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-postgres = "0.7.6"
log = "0.4.0"
env_logger = "0.9.0"
lazy_static = "1.4.0"
jsonwebtoken = "8.1.1"
chrono = "0.4"
rand = "0.8.5"
deadpool-postgres = "0.10.2"
tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.2.0", features = ["add-extension", "auth", "compression-full", "trace"] }