[package]
name = "ltt_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[source.crates-io]
replace-with = 'ustc'

[source.ustc]
registry = "git://mirrors.ustc.edu.cn/crates.io-index"


[dependencies]
futures-channel="0.3.23"
tokio-tungstenite = "*"
futures-util="0.3.23"
axum = {version= "0.5.13", features = ["ws", "headers"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-postgres = "0.7.6"
#pgvector = { version = "0.1", features = ["postgres"] }
#postgres_array = "0.9.0"
#postgres = "0.19.4"
log = "0.4.0"
env_logger = "0.9.0"
lazy_static = "1.4.0"
jsonwebtoken = "8.1.1"
chrono = "0.4"
rand = "0.8.5"
deadpool-postgres = "0.10.2"
#tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit"] }
#tower-http = { version = "0.2.0", features = ["add-extension", "auth", "compression-full", "trace"] }
lettre = "0.10.1"
async-trait = "0.1.64"
